[metadata]
name = cumulus_api_server
version = 0.1
description-file =
    README.rst
author = Ian Unruh
author-email = ianunruh@gmail.com

install-requires =
    PyYAML
    Flask

[files]
packages =
    cumulus_api

[entry_points]
console_scripts =
    cumulus-flask-api = cumulus.api:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
