[metadata]
name = cumulus_ml2_service
version = 0.1
description-file =
    README.rst
author = Ian Unruh
author-email = ianunruh@gmail.com

install-requires =
    PyYAML
    Flask

[files]
packages =
    cumulus_ml2

[entry_points]
console_scripts =
    cumulus-flask-api = cumulus_ml2.api:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
