[metadata]
name = cumulus_ml2_service
version = 0.1
description-file =
    README.rst
author = Ian Unruh
author_email = ianunruh@gmail.com
maintainer = Cumulus Networks
maintainer_email = ce-ceng@cumulusnetworks.com
install-requires =
    PyYAML
    Flask
    setuptools
license = GPLv2

[files]
packages =
    cumulus_ml2
data_files =
  ansible_modules = cumulus.CumulusLinux/*
[entry_points]
console_scripts =
    cumulus-flask-api = cumulus_ml2.api:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
