[metadata]
name = cumulus-ml2-driver
version = 0.1
description-file =
    README.md
author = Ian Unruh
author-email = ianunruh@gmail.com
maintainer = Cumulus Networks
maintainer_email = 'ce-ceng@cumulusnetworks.com'
install-requires =
    neutron
    requests
[files]
packages =
    cumulus_ml2

[entry_points]
console_scripts =
  linux_agent_switch_discovery = cumulus_ml2.linux_agent_switch_discovery:main
neutron.ml2.mechanism_drivers =
    cumulus = cumulus_ml2.mechanism_driver:CumulusMechanismDriver

[global]
setup-hooks =
    pbr.hooks.setup_hook
